--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Session Data files
 .RData
+.RDs
 
 # Example code in package build process
 *-Ex.R
@@ -17,3 +18,8 @@ vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
+.Rproj.user
+
+# Data and model files
+data/
+models/
